[#38] Fixed navbar alignment (#75)
* Fixed navbar alignment

* Fixed navar

* Fixed navar and footer

* Fixed navar and footer

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,6 +68,7 @@ section {
 
 .nav>li>a {
   padding: 30px 13px;
+  margin-top: 8px;
 }
 
 .navbar-default .navbar-nav>li>a:hover,
@@ -76,7 +77,8 @@ section {
 }
 
 .navbar-brand>img {
-  padding: 5px 0;
+  padding: 5px 5px;
+  margin-top: -2px;
 }
 
 .navbar-brand {
@@ -737,6 +739,7 @@ footer ul li a:hover {
 
 footer ul {
   padding-top: 40px;
+  margin-top: -19px;
 }
 
 footer .design-by {
@@ -744,6 +747,7 @@ footer .design-by {
   padding-top: 20px;
   margin: 0;
   font-size: 16px;
+  margin-top: -10px;
 }
 
 footer p {
@@ -891,9 +895,13 @@ a {
   background: #dcdbdb !important;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
   .navbar-brand {
-    width: 60%
+    width: 60%;
+  }
+
+  .navbar-toggle {
+    margin-top: 3.2%;
   }
 
   .navbar-default .navbar-nav>li>a {
@@ -987,7 +995,19 @@ a {
 
 @media screen and (min-width: 600px) and (max-width: 768px) {
   .navbar-nav {
-    float: left;
+    float: none;
+  }
+
+  .navbar-toggle {
+    margin-top: 3.2%;
+  }
+
+  .navbar-default .navbar-nav>li>a {
+    text-align: center;
+  }
+
+  .nav>li>a {
+    padding: 15px 13px;
   }
 
   .navbar-brand {
